--- a/clusters/galaxy-cluster/bootstrap/helmfile.yaml
+++ b/clusters/galaxy-cluster/bootstrap/helmfile.yaml
@@ -9,6 +9,8 @@ helmDefaults:
 repositories:
   - name: cilium
     url: https://helm.cilium.io
+  - name: bitwarden
+    url: https://charts.bitwarden.com
 
 releases:
   - name: cilium
@@ -34,13 +36,21 @@ releases:
     values: ['../kubernetes/apps/cert-manager/cert-manager/app/helm-values.yaml']
     needs: ['kube-system/coredns']
 
+  - name: bitwarden-secrets
+    namespace: bitwarden-secrets
+    atomic: true
+    chart: bitwarden/sm-operator
+    version: 0.1.0
+    values: ['../kubernetes/apps/bitwarden-secrets/bitwarden/app/helm-values.yaml']
+    needs: ['kube-system/coredns']
+
   - name: flux-operator
     namespace: flux-system
     atomic: true
     chart: oci://ghcr.io/controlplaneio-fluxcd/charts/flux-operator
     version: 0.27.0
     values: ['../kubernetes/apps/flux-system/flux-operator/app/helm-values.yaml']
-    needs: ['cert-manager/cert-manager']
+    needs: ['cert-manager/cert-manager', 'bitwarden-secrets/bitwarden-secrets']
 
   - name: flux-instance
     namespace: flux-system
