Bugfix: Add a secret ref to all OCI reps from github for authentication

--- a/clusters/galaxy-cluster/kubernetes/apps/kube-system/coredns/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/kube-system/coredns/app/helmrelease.yaml
@@ -12,6 +12,8 @@ spec:
   url: oci://ghcr.io/coredns/charts/coredns
   ref:
     tag: 1.43.2
+  secretRef:
+    name: ghcr-auth
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
