--- a/clusters/galaxy-cluster/kubernetes/apps/flux-system/flux-instance/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/flux-system/flux-instance/app/helmrelease.yaml
@@ -12,6 +12,8 @@ spec:
   ref:
     tag: 0.27.0
   url: oci://ghcr.io/controlplaneio-fluxcd/charts/flux-instance
+  secretRef:
+    name: ghcr-auth
 ---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/helmrelease-helm-v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
