--- a/clusters/galaxy-cluster/kubernetes/apps/kube-system/reflector/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/kube-system/reflector/app/helmrelease.yaml
@@ -12,6 +12,8 @@ spec:
   url: oci://ghcr.io/emberstack/helm-charts/reflector
   ref:
     tag: 9.1.25
+  secretRef:
+    name: ghcr-auth
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
