--- a/clusters/galaxy-cluster/bootstrap/helmfile.yaml
+++ b/clusters/galaxy-cluster/bootstrap/helmfile.yaml
@@ -44,13 +44,20 @@ releases:
     values: ['../kubernetes/apps/bitwarden-secrets/bitwarden/app/helm-values.yaml']
     needs: ['kube-system/coredns']
 
+  - name: reflector
+    namespace: kube-system
+    atomic: true
+    chart: oci://ghcr.io/emberstack/helm-charts/reflector
+    version: 9.1.25
+    needs: ['kube-system/cilium']
+
   - name: flux-operator
     namespace: flux-system
     atomic: true
     chart: oci://ghcr.io/controlplaneio-fluxcd/charts/flux-operator
     version: 0.27.0
     values: ['../kubernetes/apps/flux-system/flux-operator/app/helm-values.yaml']
-    needs: ['cert-manager/cert-manager', 'bitwarden-secrets/bitwarden-secrets']
+    needs: ['cert-manager/cert-manager', 'bitwarden-secrets/bitwarden-secrets', 'kube-system/reflector']
 
   - name: flux-instance
     namespace: flux-system
