--- a/clusters/galaxy-cluster/kubernetes/apps/bitwarden-secrets/sm-operator/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/bitwarden-secrets/sm-operator/app/helmrelease.yaml
@@ -12,7 +12,7 @@ spec:
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: bitwarden-secrets
+  name: sm-operator
 spec:
   interval: 30m
   chart:
