--- a/clusters/galaxy-cluster/kubernetes/apps/bitwarden-secrets/sm-operator/ks.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/bitwarden-secrets/sm-operator/ks.yaml
@@ -2,14 +2,14 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app bitwarden
+  name: &app sm-operator
   namespace: &namespace bitwarden-secrets
 spec:
   targetNamespace: *namespace
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
-  path: ./clusters/galaxy-cluster/kubernetes/apps/bitwarden-secrets/bitwarden/app
+  path: ./clusters/galaxy-cluster/kubernetes/apps/bitwarden-secrets/sm-operator/app
   prune: true
   sourceRef:
     kind: GitRepository
