--- a/clusters/galaxy-cluster/kubernetes/flux/cluster/ks.yaml
+++ b/clusters/galaxy-cluster/kubernetes/flux/cluster/ks.yaml
@@ -38,3 +38,21 @@ spec:
     namespace: flux-system
   timeout: 5m
   wait: false
+---
+# yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/kustomization-kustomize-v1.json
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: cluster-secrets
+  namespace: flux-system
+spec:
+  interval: 1h
+  path: ./clusters/galaxy-cluster/kubernetes/flux/secrets
+  prune: true
+  retryInterval: 2m
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+    namespace: flux-system
+  targetNamespace: bitwarden-secrets
+  wait: false
