Bugfix(GC): deploy bitwardensecret in default namespace (As reflector does not work)

--- a/clusters/galaxy-cluster/kubernetes/flux/secrets/cluster-domain.yaml
+++ b/clusters/galaxy-cluster/kubernetes/flux/secrets/cluster-domain.yaml
@@ -3,10 +3,7 @@ apiVersion: k8s.bitwarden.com/v1
 kind: BitwardenSecret
 metadata:
   name: cluster-domain
-  annotations:
-    reflector.v1.k8s.emberstack.com/reflection-allowed: "true"
-    reflector.v1.k8s.emberstack.com/reflection-allowed-namespaces: "cert-manager, default"
-    reflector.v1.k8s.emberstack.com/reflection-auto-enabled: "true"
+  namespace: default
 spec:
   organizationId: "be4b7269-6a49-4702-a578-b2090189dfe8"
   secretName: cluster-domain
