--- a/clusters/galaxy-cluster/kubernetes/apps/cert-manager/cert-manager/app/helm-values.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/cert-manager/cert-manager/app/helm-values.yaml
@@ -1,7 +1,7 @@
 crds:
   enabled: true
 replicaCount: 1
-dns01RecursiveNameservers: https://1.1.1.1:443/dns-query,https://1.0.0.1:443/dns-query
+dns01RecursiveNameservers: kubedns.kube-system.svc.cluster.local:53
 dns01RecursiveNameserversOnly: true
 prometheus:
   enabled: true
