Feature: Split bw secrets into per namespace and add relevant map entries

--- a/clusters/galaxy-cluster/kubernetes/flux/secrets/bw-secrets-default.yaml
+++ b/clusters/galaxy-cluster/kubernetes/flux/secrets/bw-secrets-default.yaml
@@ -2,11 +2,11 @@
 apiVersion: k8s.bitwarden.com/v1
 kind: BitwardenSecret
 metadata:
-  name: cluster-domain
+  name: bw-secrets-default
   namespace: default
 spec:
   organizationId: "be4b7269-6a49-4702-a578-b2090189dfe8"
-  secretName: cluster-domain
+  secretName: bw-secrets-default
   map:
     - bwSecretId: 79e8ddf9-0688-4252-a73b-b33800c09a79
       secretKeyName: SECRET_DOMAIN
