--- a/clusters/galaxy-cluster/kubernetes/flux/secrets/kustomization.yaml
+++ b/clusters/galaxy-cluster/kubernetes/flux/secrets/kustomization.yaml
@@ -3,4 +3,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ./cluster-domain.yaml
+  - ./bw-secrets-cert.yaml
+  - ./bw-secrets-default.yaml
