--- a/clusters/galaxy-cluster/kubernetes/flux/secrets/bw-secrets-cert.yaml
+++ b/clusters/galaxy-cluster/kubernetes/flux/secrets/bw-secrets-cert.yaml
@@ -13,7 +13,7 @@ spec:
     - bwSecretId: 95f27c48-44d1-44d5-946a-b3390151c2a2
       secretKeyName: SECRET_EMAIL
     - bwSecretId: 3a62bcd3-de74-4430-9831-b3390151e3b8
-      secretKeyName: NJALLA_API
+      secretKeyName: token
   authToken:
     secretName: bw-auth-token
     secretKey: token
