Bugfix(GC): Update bitwardensecret access to only have needed secrets

--- a/clusters/galaxy-cluster/kubernetes/flux/secrets/bw-secrets-cert.yaml
+++ b/clusters/galaxy-cluster/kubernetes/flux/secrets/bw-secrets-cert.yaml
@@ -15,5 +15,5 @@ spec:
     - bwSecretId: 3a62bcd3-de74-4430-9831-b3390151e3b8
       secretKeyName: token
   authToken:
-    secretName: bw-auth-token
+    secretName: bw-auth-token-cert
     secretKey: token
