Bugfix(GC): Fix crd value in helmrelease of traefik ingress

--- a/clusters/galaxy-cluster/kubernetes/apps/traefik/traefik-ingress/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/traefik/traefik-ingress/app/helmrelease.yaml
@@ -23,13 +23,11 @@ spec:
     kind: OCIRepository
     name: traefik-ingress
   install:
-    crds:
-      skip: true
+    crds: "Skip"
     remediation:
       retries: 3
   upgrade:
-    crds:
-      skip: true
+    crds: "Skip"
     cleanupOnFail: true
     remediation:
       retries: 3
