Feature(GC): Update traefik ingress name to smth sensible

--- a/clusters/galaxy-cluster/kubernetes/apps/traefik/traefik-ingress/app/helm-values.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/traefik/traefik-ingress/app/helm-values.yaml
@@ -25,3 +25,10 @@ ports:
   websecure:
     http3:
       enabled: true
+
+
+# -- Create a default IngressClass for Traefik
+ingressClass:  # @schema additionalProperties: false
+  enabled: true
+  isDefaultClass: true
+  name: "traefik-ingress-lan"
