--- a/clusters/galaxy-cluster/kubernetes/apps/default/vibe-job-lp/ks.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/default/vibe-job-lp/ks.yaml
@@ -20,7 +20,7 @@ spec:
     namespace: flux-system
   postBuild:
     substituteFrom:
-      - name: bw-secrets-cert
+      - name: bw-secrets-default
         kind: Secret
   wait: true
   interval: 30m
