Feature(GC): Add a complete map to default bitwarden secret

--- a/clusters/galaxy-cluster/kubernetes/flux/secrets/bw-secrets-default.yaml
+++ b/clusters/galaxy-cluster/kubernetes/flux/secrets/bw-secrets-default.yaml
@@ -10,6 +10,30 @@ spec:
   map:
     - bwSecretId: 79e8ddf9-0688-4252-a73b-b33800c09a79
       secretKeyName: SECRET_DOMAIN
+    - bwSecretId: b3a06443-f5d2-4c3b-9d76-b21300e15f39
+      secretKeyName: INVIDIOUS_PO_TOKEN
+    - bwSecretId: 243f3fe8-f8b5-43b3-8673-b21300e18342
+      secretKeyName: INVIDIOUS_VISITOR_DATA
+    - bwSecretId: da8e27ff-a447-4517-96de-b26d01412596
+      secretKeyName: JELLYSEER_API_KEY
+    - bwSecretId: 3a62bcd3-de74-4430-9831-b3390151e3b8
+      secretKeyName: NJALLA_API
+    - bwSecretId: 223abe52-574f-420a-a88b-b21300e10fce
+      secretKeyName: INVIDIOUS_HMAC
+    - bwSecretId: e588e1a9-6342-45f0-b47e-b21100c16764
+      secretKeyName: PIHOLE_API
+    - bwSecretId: 483c0c23-dd13-4837-925e-b20f00935f8b
+      secretKeyName: PIHOLE_PASSWORD
+    - bwSecretId: 31c25d45-71a9-4e59-8470-b26d00edbd73
+      secretKeyName: PROWLARR_AUTH_API
+    - bwSecretId: b68641f5-70e2-432d-b693-b26d010af886
+      secretKeyName: RADARR_AUTH_API
+    - bwSecretId: 95f27c48-44d1-44d5-946a-b3390151c2a2
+      secretKeyName: SECRET_EMAIL
+    - bwSecretId: 1f2af75e-55c4-48c6-8b0e-b26d011137da
+      secretKeyName: SONARR_AUTH_API
+    - bwSecretId: fcb16781-c5a9-4c02-8fea-b2dd011c54a9
+      secretKeyName: SPLIT_PRO_SMTP_PASSWORD
   authToken:
     secretName: bw-auth-token
     secretKey: token
