--- a/clusters/galaxy-cluster/kubernetes/apps/network/blocky/app/kustomizeconfig.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/network/blocky/app/kustomizeconfig.yaml
@@ -5,3 +5,5 @@ nameReference:
     fieldSpecs:
       - path: spec/valuesFrom/name
         kind: HelmRelease
+      - path: spec/values/persistence/config/name
+        kind: HelmRelease
