--- a/clusters/galaxy-cluster/kubernetes/apps/network/blocky/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/network/blocky/app/helmrelease.yaml
@@ -17,6 +17,14 @@ spec:
     cleanupOnFail: true
     remediation:
       retries: 3
+  values:
+    persistence:
+      config:
+        globalMounts:
+          - path: /app/config.yaml
+            subPath: config.yaml
+        name: blocky-config
+        type: configMap
   valuesFrom:
     - kind: ConfigMap
       name: blocky-helm-values
