--- a/clusters/galaxy-cluster/kubernetes/apps/network/blocky/app/helm-values.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/network/blocky/app/helm-values.yaml
@@ -22,6 +22,8 @@ controllers:
         securityContext:
           allowPrivilegeEscalation: false
           capabilities:
+            add:
+              - NET_BIND_SERVICE
             drop:
               - ALL
           readOnlyRootFilesystem: true
