Bugfix(GC): Fix naming of config file

--- a/clusters/galaxy-cluster/kubernetes/apps/network/blocky/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/network/blocky/app/helmrelease.yaml
@@ -21,8 +21,8 @@ spec:
     persistence:
       config:
         globalMounts:
-          - path: /app/config.yaml
-            subPath: config.yaml
+          - path: /app/config.yml
+            subPath: config.yml
         name: blocky-config
         type: configMap
   valuesFrom:
