Bugfix(GC): Fix configmap reference in blocky helmrelease

--- a/clusters/galaxy-cluster/kubernetes/apps/network/blocky/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/network/blocky/app/helmrelease.yaml
@@ -22,7 +22,7 @@ spec:
       config:
         globalMounts:
           - path: /app/config.yml
-            subPath: config.yml
+            subPath: config.yaml
         name: blocky-config
         type: configMap
   valuesFrom:
