Feature(GC): Add tcp dns and change port to 53

--- a/clusters/galaxy-cluster/kubernetes/apps/network/blocky/app/helm-values.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/network/blocky/app/helm-values.yaml
@@ -57,8 +57,10 @@ service:
     ports:
       dns-udp:
         port: 53
-        targetPort: 5353
         protocol: UDP
+      dns-tcp:
+        port: 53
+        protocol: TCP
     type: LoadBalancer
 
   metrics:
