--- a/clusters/galaxy-cluster/kubernetes/apps/network/blocky/app/helm-values.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/network/blocky/app/helm-values.yaml
@@ -54,6 +54,8 @@ service:
     controller: blocky
     labels:
       network: lan
+    annotations:
+      "lbipam.cilium.io/sharing-key": "blocky-shared"
     ports:
       dns-udp:
         port: 53
