--- a/clusters/galaxy-cluster/talos/patches/global/sysctl.yaml
+++ b/clusters/galaxy-cluster/talos/patches/global/sysctl.yaml
@@ -9,3 +9,4 @@ machine:
     net.ipv4.neigh.default.gc_thresh3: 16384 # Prevent ARP cache overflows
     user.max_user_namespaces: "11255"          # User Namespaces
     net.ipv4.ip_forward: 1 # Enable Tailscale subnet routing
+    vm.nr_hugepages: "1024" # OpenEBS
