--- a/clusters/galaxy-cluster/kubernetes/apps/cert-manager/cert-manager/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/cert-manager/cert-manager/app/helmrelease.yaml
@@ -12,6 +12,8 @@ spec:
   ref:
     tag: v1.18.2
   url: oci://quay.io/jetstack/charts/cert-manager
+  secretRef:
+    name: ghcr-auth
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
