--- a/clusters/galaxy-cluster/kubernetes/flux/cluster/ks.yaml
+++ b/clusters/galaxy-cluster/kubernetes/flux/cluster/ks.yaml
@@ -16,6 +16,7 @@ spec:
     namespace: flux-system
   # Flux repositories under this need flux-system hardcoded as namespace for Renovate lookups
   targetNamespace: *namespace
+  timeout: 5m
   wait: true
 ---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/kustomization-kustomize-v1.json
@@ -55,3 +56,4 @@ spec:
     name: flux-system
     namespace: flux-system
   wait: false
+  timeout: 5m
