Feature(GC): Update patches for openebs deployment

--- a/clusters/galaxy-cluster/talos/patches/global/openebs.yaml
+++ b/clusters/galaxy-cluster/talos/patches/global/openebs.yaml
@@ -5,10 +5,10 @@ machine:
     topology.kubernetes.io/zone: m
   kubelet:
     extraMounts:
-      - destination: /var/openebs/local
+      - destination: /var/openebs
         type: bind
-        source: /var/openebs/local
+        source: /var/openebs
         options:
-          - rbind
+          - bind
           - rshared
           - rw
