--- a/clusters/galaxy-cluster/talos/patches/controller/cluster.yaml
+++ b/clusters/galaxy-cluster/talos/patches/controller/cluster.yaml
@@ -4,6 +4,14 @@ cluster:
     extraArgs:
       # https://kubernetes.io/docs/tasks/extend-kubernetes/configure-aggregation-layer/
       enable-aggregator-routing: true
+    admissionControl: # Needed for OpenEBS
+      - name: PodSecurity
+        configuration:
+          apiVersion: pod-security.admission.config.k8s.io/v1beta1
+          kind: PodSecurityConfiguration
+          exemptions:
+            namespaces:
+              - openebs-system
   controllerManager:
     extraArgs:
       bind-address: 0.0.0.0
