Bugfix(GC): Adjust affinity of cluster pods

--- a/clusters/galaxy-cluster/kubernetes/apps/database/local-database/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/database/local-database/app/helmrelease.yaml
@@ -42,7 +42,7 @@ spec:
               podAffinityTerm:
                 labelSelector:
                   matchExpressions:
-                    - key: postgresql.cnpg.io/cluster
+                    - key: cnpg.io/cluster
                       operator: In
                       values:
                         - local-database
