Bugfix(GC): Define affinity in accordance with cluster spec

--- a/clusters/galaxy-cluster/kubernetes/apps/database/local-database/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/database/local-database/app/helmrelease.yaml
@@ -36,14 +36,5 @@ spec:
           login: true
           superuser: false
       affinity:
-        podAntiAffinity:
-          preferredDuringSchedulingIgnoredDuringExecution:
-            - weight: 100
-              podAffinityTerm:
-                labelSelector:
-                  matchExpressions:
-                    - key: cnpg.io/cluster
-                      operator: In
-                      values:
-                        - local-database
-                topologyKey: kubernetes.io/hostname     
+        podAntiAffinityType: preferred
+        topologyKey: kubernetes.io/hostname
