Feature(GC): change roles to a single generalApps role

--- a/clusters/galaxy-cluster/kubernetes/apps/database/local-database/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/database/local-database/app/helmrelease.yaml
@@ -31,10 +31,12 @@ spec:
         storageClass: "openebs-hostpath"
 
       roles:
-        - name: invidious
+        - name: generalApps
           ensure: present
           login: true
           superuser: false
+          passwordSecret:
+            name: generalapps-auth
       affinity:
         podAntiAffinityType: preferred
         topologyKey: kubernetes.io/hostname
