Feature(GC): Update size of db pvc

--- a/clusters/galaxy-cluster/kubernetes/apps/database/local-database/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/database/local-database/app/helmrelease.yaml
@@ -29,6 +29,7 @@ spec:
       instances: 3
       storage:
         storageClass: "openebs-hostpath"
+        size: 50Gi
 
       roles:
         - name: generalApps
