--- a/clusters/galaxy-cluster/kubernetes/apps/default/invidious/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/default/invidious/app/helmrelease.yaml
@@ -18,7 +18,7 @@ spec:
   chart:
     spec:
       chart: invidious
-      version: 2.3.1
+      version: v2.3.1
       sourceRef:
         kind: HelmRepository
         name: charts-plutode
