--- a/.renovaterc.json5
+++ b/.renovaterc.json5
@@ -177,7 +177,7 @@
       "hostType": "docker",
       "matchHost": "ghcr.io",
       "username": "b0bby31",
-      "password": "{{ env.GHCR_TOKEN }}"
+      "password": "{{ secrets.GHCR_TOKEN }}"
     }
   ],
 }
