--- a/clusters/galaxy-cluster/kubernetes/apps/traefik/traefik-external/app/helm-values.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/traefik/traefik-external/app/helm-values.yaml
@@ -11,9 +11,9 @@ service:
   single: false
   type: LoadBalancer
   annotations:
-    "lbipam.cilium.io/sharing-key": "traefik-ingress-lan"
+    "lbipam.cilium.io/sharing-key": "traefik-external"
   labels:
-    network: lan
+    network: public
 
 ports:
   web:
@@ -30,5 +30,5 @@ ports:
 # -- Create a default IngressClass for Traefik
 ingressClass:  # @schema additionalProperties: false
   enabled: true
-  isDefaultClass: true
-  name: "traefik-ingress-lan"
+  isDefaultClass: false
+  name: "traefik-external"
