--- a/clusters/galaxy-cluster/kubernetes/apps/traefik/traefik-external/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/traefik/traefik-external/app/helmrelease.yaml
@@ -16,7 +16,7 @@ spec:
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: traefik-ingress
+  name: traefik-external
 spec:
   interval: 30m
   chartRef:
@@ -33,4 +33,4 @@ spec:
       retries: 3
   valuesFrom:
     - kind: ConfigMap
-      name: traefik-ingress-helm-values
+      name: traefik-external-helm-values
