--- a/clusters/galaxy-cluster/kubernetes/apps/traefik/kustomization.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/traefik/kustomization.yaml
@@ -3,5 +3,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./traefik-crds/ks.yaml
-  - ./traefik-ingress/ks.yaml
+  - ./traefik-external/ks.yaml
   - ./traefik-internal/ks.yaml
