Bugfix(GC): Switch ingresses of deployments to appropriate ingress deployments

--- a/clusters/galaxy-cluster/kubernetes/apps/default/vibe-job-lp/app/deployment.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/default/vibe-job-lp/app/deployment.yaml
@@ -57,6 +57,7 @@ metadata:
     kubernetes.io/tls-acme: "true"
     cert-manager.io/cluster-issuer: letsencrypt-prod
 spec:
+  ingressClassName: "traefik-external"
   rules:
     - host: lp.${SECRET_DOMAIN}
       http:
