--- a/clusters/galaxy-cluster/kubernetes/apps/network/blocky/app/blocky-config.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/network/blocky/app/blocky-config.yaml
@@ -20,9 +20,14 @@ bootstrapDns:
 customDNS:
   customTTL: 1h
   mapping:
-    lp.de.plutode.com: 192.168.31.35
-    ha.de.plutode.com: 10.11.0.52
+    lp.de.plutode.com: 192.168.15.40
+    ha.de.plutode.com: 10.21.0.40
     jellyfin.de.plutode.com: 10.21.0.31
+    request.de.plutode.com: 10.21.0.40
+    sonarr.de.plutode.com: 10.21.0.40
+    radarr.de.plutode.com: 10.21.0.40
+    youtube.de.plutode.com: 10.21.0.40
+    inv.de.plutode.com: 10.21.0.40
 
 # Split dns
 conditional:
