--- a/clusters/galaxy-cluster/kubernetes/apps/network/blocky/app/blocky-config.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/network/blocky/app/blocky-config.yaml
@@ -23,6 +23,7 @@ customDNS:
     lp.de.plutode.com: 192.168.15.40
     ha.de.plutode.com: 10.21.0.40
     jellyfin.de.plutode.com: 10.21.0.31
+    nas.de.plutode.com: 10.21.0.31
     request.de.plutode.com: 10.21.0.40
     sonarr.de.plutode.com: 10.21.0.40
     radarr.de.plutode.com: 10.21.0.40
