--- a/clusters/galaxy-cluster/kubernetes/apps/default/prowlarr/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/default/prowlarr/app/helmrelease.yaml
@@ -32,7 +32,7 @@ spec:
               PROWLARR__APP__THEME: dark
               PROWLARR__AUTH__METHOD: External
               PROWLARR__AUTH__REQUIRED: DisabledForLocalAddresses
-              PROWLARR__AUTH__APIKEY: ${PROWLARR_AUTH_API}
+              PROWLARR__AUTH__APIKEY: "${PROWLARR_AUTH_API}"
               PROWLARR__POSTGRES__HOST: local-database-rw.database.svc.cluster.local
               PROWLARR__POSTGRES__PORT: 5432
               PROWLARR__POSTGRES__MAINDB: prowlarr-main
