--- a/clusters/galaxy-cluster/kubernetes/apps/default/sonarr/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/default/sonarr/app/helmrelease.yaml
@@ -32,7 +32,7 @@ spec:
               SONARR__APP__THEME: dark
               SONARR__AUTH__METHOD: External
               SONARR__AUTH__REQUIRED: DisabledForLocalAddresses
-              SONARR__AUTH__APIKEY: ${SONARR_AUTH_API}
+              SONARR__AUTH__APIKEY: "${SONARR_AUTH_API}"
               SONARR__POSTGRES__HOST: local-database-rw.database.svc.cluster.local
               SONARR__POSTGRES__PORT: 5432
               SONARR__POSTGRES__MAINDB: sonarr-main
