--- a/clusters/galaxy-cluster/talos/patches/global/sysctl.yaml
+++ b/clusters/galaxy-cluster/talos/patches/global/sysctl.yaml
@@ -5,8 +5,8 @@ machine:
     net.core.rmem_max: "7500000"               # Cloudflared | QUIC
     net.core.wmem_max: "7500000"               # Cloudflared | QUIC
     net.ipv4.neigh.default.gc_thresh1: "4096"  # Prevent ARP cache overflows
-    net.ipv4.neigh.default.gc_thresh2: 8192  # Prevent ARP cache overflows
-    net.ipv4.neigh.default.gc_thresh3: 16384 # Prevent ARP cache overflows
+    net.ipv4.neigh.default.gc_thresh2: "8192"  # Prevent ARP cache overflows
+    net.ipv4.neigh.default.gc_thresh3: "16384" # Prevent ARP cache overflows
     user.max_user_namespaces: "11255"          # User Namespaces
-    net.ipv4.ip_forward: 1 # Enable Tailscale subnet routing
+    net.ipv4.ip_forward: "1" # Enable Tailscale subnet routing
     vm.nr_hugepages: "1024" # OpenEBS
