Fix(GC): Fix renovate timezone and config refs

--- a/.renovaterc.json5
+++ b/.renovaterc.json5
@@ -4,15 +4,15 @@
     "config:recommended",
     "docker:enableMajor",
     "helpers:pinGitHubActionDigests",
-    "github>b0bby31/MultiverseOps//.renovate/groups.json5",
-    "github>b0bby31/MultiverseOps//.renovate/labels.json5",
-    "github>b0bby31/MultiverseOps//.renovate/overrides.json5",
-    "github>b0bby31/MultiverseOps//.renovate/semanticCommits.json5",
+    "github>B0bby31/MultiverseOps//.renovate/groups.json5",
+    "github>B0bby31/MultiverseOps//.renovate/labels.json5",
+    "github>B0bby31/MultiverseOps//.renovate/overrides.json5",
+    "github>B0bby31/MultiverseOps//.renovate/semanticCommits.json5",
     ":automergeBranch",
     ":disableRateLimiting",
     ":dependencyDashboard",
     ":semanticCommits",
-    ":timezone(America/New_York)",
+    ":timezone(Europe/Amsterdam)",
   ],
   dependencyDashboardTitle: "Renovate Dashboard 🤖",
   suppressNotifications: [
