--- a/clusters/galaxy-cluster/kubernetes/apps/network/multus/ks.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/network/multus/ks.yaml
@@ -38,6 +38,7 @@ spec:
     namespace: flux-system
   dependsOn:
     - name: multus
+    - name: whereabouts
   wait: true
   interval: 30m
   retryInterval: 1m
