--- a/clusters/galaxy-cluster/kubernetes/apps/network/multus/networks/lan.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/network/multus/networks/lan.yaml
@@ -4,6 +4,7 @@ kind: NetworkAttachmentDefinition
 metadata:
   name: multus-lan
 spec:
+  # For routes all are routed except pod, svc nets
   config: |-
     {
       "cniVersion": "0.3.1",
@@ -11,13 +12,14 @@ spec:
       "type": "bridge",
       "bridge": "br0",
       "ipam": {
-        "type": "host-local",
-        "subnet": "192.168.31.0/24",
-        "rangeStart": "192.168.31.15",
-        "rangeEnd": "192.168.31.19",
+        "type": "whereabouts",
+        "range": "192.168.31.16/29",
         "routes": [
           { "dst": "0.0.0.0/0" }
         ],
-        "gateway": "192.168.31.1"
+        "gateway": "192.168.31.1",
+        "dns": {
+          "nameservers": ["9.9.9.9, 1.1.1.1"]
+        }
       }
     }
