--- a/clusters/galaxy-cluster/kubernetes/apps/network/multus/networks/lan.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/network/multus/networks/lan.yaml
@@ -13,7 +13,9 @@ spec:
       "bridge": "br0",
       "ipam": {
         "type": "whereabouts",
-        "range": "192.168.31.16/29",
+        "range": "192.168.31.0/24",
+        "range_start": "192.168.31.14",
+        "range_end": "192.168.31.19",
         "routes": [
           { "dst": "0.0.0.0/0" }
         ],
