Chore(GC): Finalize multus network definitions

--- a/clusters/galaxy-cluster/kubernetes/apps/network/multus/networks/lan.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/network/multus/networks/lan.yaml
@@ -19,9 +19,6 @@ spec:
         "routes": [
           { "dst": "0.0.0.0/0" }
         ],
-        "gateway": "192.168.31.1",
-        "dns": {
-          "nameservers": ["9.9.9.9, 1.1.1.1"]
-        }
+        "gateway": "192.168.31.1"
       }
     }
