Feature(GC): Adjust blocky configuration to use rolling update

--- a/clusters/galaxy-cluster/kubernetes/apps/network/blocky/app/helm-values.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/network/blocky/app/helm-values.yaml
@@ -2,6 +2,9 @@ controllers:
   blocky:
     type: deployment
     replicas: 3
+    strategy: RollingUpdate
+    rollingUpdate:
+      unavailable: 2
     containers:
       app:
         image:
