Fix(GC): Ensure whereabout pods are scheduled in network namespace

--- a/clusters/galaxy-cluster/kubernetes/apps/network/whereabouts/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/network/whereabouts/app/helmrelease.yaml
@@ -32,3 +32,5 @@ spec:
     remediation:
       strategy: rollback
       retries: 3
+  values:
+    namespaceOverride: "network" # Why is the namespace overriden in the helm chart ?!
