--- a/clusters/galaxy-cluster/kubernetes/apps/external-secrets/external-secrets/ks.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/external-secrets/external-secrets/ks.yaml
@@ -15,7 +15,31 @@ spec:
     - name: bitwarden-sdk-server
   sourceRef:
     kind: GitRepository
-    name: home-kubernetes
+    name: flux-system
+    namespace: flux-system
+  wait: true
+  interval: 30m
+  retryInterval: 1m
+  timeout: 5m
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: &app external-secrets-store
+  namespace: &namespace external-secrets
+spec:
+  targetNamespace: *namespace
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *app
+  path: ./kubernetes/apps/external-secrets/external-secrets/store
+  prune: true
+  dependsOn:
+    - name: external-secrets
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+    namespace: flux-system
   wait: true
   interval: 30m
   retryInterval: 1m
