Fix(GC): Fix formatting of chart ref in helmreleases

--- a/clusters/galaxy-cluster/kubernetes/apps/external-secrets/bitwarden-sdk-server/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/external-secrets/bitwarden-sdk-server/app/helmrelease.yaml
@@ -21,7 +21,7 @@ metadata:
   name: bitwarden-sdk-server
 spec:
   interval: 30m
-  chart:
+  chartRef:
     kind: OCIRepository
     name: bitwarden-sdk-server
   install:
