--- a/clusters/galaxy-cluster/kubernetes/apps/external-secrets/external-secrets/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/external-secrets/external-secrets/app/helmrelease.yaml
@@ -21,7 +21,7 @@ metadata:
   name: external-secrets
 spec:
   interval: 30m
-  chart:
+  chartRef:
     kind: OCIRepository
     name: external-secrets
   install:
