--- a/clusters/galaxy-cluster/kubernetes/apps/external-secrets/bitwarden-sdk-server/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/external-secrets/bitwarden-sdk-server/app/helmrelease.yaml
@@ -11,7 +11,7 @@ spec:
     operation: copy
   url: oci://ghcr.io/external-secrets/charts/bitwarden-sdk-server
   ref:
-    tag: 0.5.1
+    tag: v0.5.1
   secretRef:
     name: ghcr-auth
 ---
