--- a/clusters/galaxy-cluster/kubernetes/flux/cluster/ks.yaml
+++ b/clusters/galaxy-cluster/kubernetes/flux/cluster/ks.yaml
@@ -28,7 +28,7 @@ metadata:
 spec:
   dependsOn:
     - name: cluster-meta
-      namespace: flux-system
+    - name: cluster-secrets
   interval: 1h
   path: ./clusters/galaxy-cluster/kubernetes/apps
   prune: true
@@ -45,8 +45,9 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: cluster-secrets
-  namespace: flux-system
+  namespace: &namespace flux-system
 spec:
+  targetNamespace: *namespace
   interval: 1h
   path: ./clusters/galaxy-cluster/kubernetes/flux/secrets
   prune: true
