Fix(GC): Fix the external secrets template

--- a/clusters/galaxy-cluster/kubernetes/flux/secrets/github-auth-secret.yaml
+++ b/clusters/galaxy-cluster/kubernetes/flux/secrets/github-auth-secret.yaml
@@ -21,9 +21,9 @@ spec:
 
       # Use inline templates to construct your desired config file that contains your secret
       data:
-        .dockerconfigjson: '{"auths":{"ghcr.io":{"username":"B0bby31","password":"{{ .github-token }}","auth":"{{ printf "%s:%s" B0bby31 .github-token | b64enc }}"}}}'
+        .dockerconfigjson: '{"auths":{"ghcr.io":{"username":"B0bby31","password":"{{ .githubToken }}","auth":"{{ printf "%s:%s" B0bby31 .githubToken | b64enc }}"}}}'
 
   data:
-  - secretKey: github-token
+  - secretKey: githubToken
     remoteRef:
       key: "223abe52-574f-420a-a88b-b21300e10fce"
