--- a/clusters/galaxy-cluster/kubernetes/apps/redis/kustomization.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/redis/kustomization.yaml
@@ -3,6 +3,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./namespace.yaml
-  - ./redis-operator/ks.yaml
-  - ./redis-cluster/ks.yaml
+#  - ./redis-operator/ks.yaml
+#  - ./redis-cluster/ks.yaml
   
