Fix(GC): Modify ghcr auth template

--- a/clusters/galaxy-cluster/kubernetes/flux/secrets/github-auth-secret.yaml
+++ b/clusters/galaxy-cluster/kubernetes/flux/secrets/github-auth-secret.yaml
@@ -21,7 +21,7 @@ spec:
 
       # Use inline templates to construct your desired config file that contains your secret
       data:
-        .dockerconfigjson: '{"auths":{"ghcr.io":{"username":"B0bby31","password":"{{ .githubToken }}","auth":"{{ printf "%s:%s" B0bby31 .githubToken | b64enc }}"}}}'
+        .dockerconfigjson: '{"auths":{"ghcr.io":{"username":"B0bby31","password":"{{ .githubToken }}","auth":"{{ printf "B0bby31:%s" .githubToken | b64enc }}"}}}'
 
   data:
   - secretKey: githubToken
