Fix(GC): Switch all OCI repos to new auth token (if needed)

--- a/clusters/galaxy-cluster/kubernetes/apps/default/vibe-job-lp/app/deployment.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/default/vibe-job-lp/app/deployment.yaml
@@ -15,7 +15,7 @@ spec:
         app: landingpage
     spec:
       imagePullSecrets:
-        - name: ghcr-auth
+        - name: ghcr-io-auth
       securityContext:
         runAsNonRoot: true              # Pod must not run as root
         runAsUser: 1000                 # Non-root UID
