--- a/clusters/galaxy-cluster/kubernetes/flux/meta/repos/app-template.yaml
+++ b/clusters/galaxy-cluster/kubernetes/flux/meta/repos/app-template.yaml
@@ -14,4 +14,4 @@ spec:
     tag: 4.2.0
   url: oci://ghcr.io/bjw-s-labs/helm/app-template
   secretRef:
-    name: ghcr-auth
+    name: ghcr-io-auth
