--- a/clusters/galaxy-cluster/kubernetes/apps/external-secrets/external-secrets/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/external-secrets/external-secrets/app/helmrelease.yaml
@@ -13,7 +13,7 @@ spec:
   ref:
     tag: 0.19.2
   secretRef:
-    name: ghcr-auth
+    name: ghcr-io-auth
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
