--- a/clusters/galaxy-cluster/kubernetes/apps/flux-system/flux-operator/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/flux-system/flux-operator/app/helmrelease.yaml
@@ -13,7 +13,7 @@ spec:
     tag: 0.28.0
   url: oci://ghcr.io/controlplaneio-fluxcd/charts/flux-operator
   secretRef:
-    name: ghcr-auth
+    name: ghcr-io-auth
 ---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/helmrelease-helm-v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
