--- a/clusters/galaxy-cluster/kubernetes/apps/kube-system/reflector/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/kube-system/reflector/app/helmrelease.yaml
@@ -13,7 +13,7 @@ spec:
   ref:
     tag: 9.1.27
   secretRef:
-    name: ghcr-auth
+    name: ghcr-io-auth
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
