Feat(GC): Add cluster secrets

--- a/clusters/galaxy-cluster/kubernetes/flux/secrets/kustomization.yaml
+++ b/clusters/galaxy-cluster/kubernetes/flux/secrets/kustomization.yaml
@@ -5,4 +5,5 @@ kind: Kustomization
 resources:
   - ./bw-secrets-cert.yaml
   - ./bw-secrets-default.yaml
+  - ./cluster-secrets.yaml
   - ./github-auth-secret.yaml
