Chore(GC): Migrate cert manager to use external secrets

--- a/clusters/galaxy-cluster/kubernetes/apps/cert-manager/letsencrypt-issuer/issuers/prod-issuer.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/cert-manager/letsencrypt-issuer/issuers/prod-issuer.yaml
@@ -20,5 +20,5 @@ spec:
             solverName: njalla
             config:
               apiKeySecretRef:
-                name: bw-secrets-cert
+                name: njalla-api-secret
                 key: token
