--- a/clusters/galaxy-cluster/kubernetes/apps/cert-manager/letsencrypt-issuer/ks.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/cert-manager/letsencrypt-issuer/ks.yaml
@@ -20,7 +20,7 @@ spec:
     namespace: flux-system
   postBuild:
     substituteFrom:
-      - name: bw-secrets-cert
+      - name: cluster-secrets
         kind: Secret
   wait: true
   interval: 30m
