--- a/clusters/galaxy-cluster/kubernetes/apps/cert-manager/njalla-webhook/ks.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/cert-manager/njalla-webhook/ks.yaml
@@ -22,7 +22,7 @@ spec:
     namespace: flux-system
   postBuild:
     substituteFrom:
-      - name: bw-secrets-cert
+      - name: cluster-secrets
         kind: Secret
   wait: true
   interval: 30m
