--- a/clusters/galaxy-cluster/kubernetes/apps/database/local-database/ks.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/database/local-database/ks.yaml
@@ -18,6 +18,31 @@ spec:
   dependsOn:
     - name: cnpg
       namespace: cnpg-system
+    - name: local-database-users
+  wait: true
+  interval: 30m
+  retryInterval: 1m
+  timeout: 5m
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: &app local-database-users
+  namespace: &namespace database
+spec:
+  targetNamespace: *namespace
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *app
+  path: ./clusters/galaxy-cluster/kubernetes/apps/database/local-database/user-secrets
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+    namespace: flux-system
+  dependsOn:
+    - name: external-secrets-store
+      namespace: external-secrets
   wait: true
   interval: 30m
   retryInterval: 1m
