Chore(GC): Have local database reference the correct secrets

--- a/clusters/galaxy-cluster/kubernetes/apps/database/local-database/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/database/local-database/app/helmrelease.yaml
@@ -37,7 +37,7 @@ spec:
           login: true
           superuser: false
           passwordSecret:
-            name: generalapps-auth
+            name: genapps-auth
       affinity:
         podAntiAffinityType: preferred
         topologyKey: kubernetes.io/hostname
