--- a/clusters/galaxy-cluster/kubernetes/apps/network/blocky/app/helm-values.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/network/blocky/app/helm-values.yaml
@@ -69,6 +69,38 @@ service:
         protocol: TCP
     type: LoadBalancer
 
+  app-local:
+    controller: blocky
+    labels:
+      network: local
+    annotations:
+      "lbipam.cilium.io/sharing-key": "blocky-shared-local"
+      "lbipam.cilium.io/ips": "10.11.0.110"
+    ports:
+      dns-udp:
+        port: 53
+        protocol: UDP
+      dns-tcp:
+        port: 53
+        protocol: TCP
+    type: LoadBalancer
+
+  app-known:
+    controller: blocky
+    labels:
+      network: known
+    annotations:
+      "lbipam.cilium.io/sharing-key": "blocky-shared-known"
+      "lbipam.cilium.io/ips": "10.21.0.41"
+    ports:
+      dns-udp:
+        port: 53
+        protocol: UDP
+      dns-tcp:
+        port: 53
+        protocol: TCP
+    type: LoadBalancer
+  
   metrics:
     controller: blocky
     type: ClusterIP
