--- a/clusters/galaxy-cluster/kubernetes/apps/network/mosquitto/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/network/mosquitto/app/helmrelease.yaml
@@ -77,7 +77,7 @@ spec:
             port: 1883
 
       mosquitto-cluster:
-        controller: blocky
+        controller: mosquitto
         type: ClusterIP
         ports:
           mqtt:
