--- a/clusters/galaxy-cluster/talos/talconfig.yaml
+++ b/clusters/galaxy-cluster/talos/talconfig.yaml
@@ -212,6 +212,7 @@ patches:
   - "@./patches/global/time.yaml"
   - "@./patches/global/sysctl.yaml"
   - "@./patches/global/sysupgrade.yaml"
+  - "@./patches/global/openebs.yaml"
 
 # Controller patches
 controlPlane:
