Chore(GC): Add dns record to blocky

--- a/clusters/galaxy-cluster/kubernetes/apps/network/blocky/app/blocky-config.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/network/blocky/app/blocky-config.yaml
@@ -22,6 +22,7 @@ customDNS:
   mapping:
     lp.de.plutode.com: 192.168.15.40
     ha.de.plutode.com: 10.11.0.52
+    edit.ha.de.plutode.com: 10.11.0.51
     jellyfin.de.plutode.com: 10.21.0.31
     nas.de.plutode.com: 10.21.0.31
     request.de.plutode.com: 10.21.0.40
