--- a/clusters/galaxy-cluster/kubernetes/apps/default/home-assistant/ks.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/default/home-assistant/ks.yaml
@@ -23,8 +23,9 @@ spec:
   retryInterval: 1m
   timeout: 5m
   postBuild:
-    - name: cluster-secrets
-      kind: Secret
+    substituteFrom:
+      - name: cluster-secrets
+        kind: Secret
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
