--- a/clusters/galaxy-cluster/kubernetes/apps/default/prowlarr/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/default/prowlarr/app/helmrelease.yaml
@@ -32,17 +32,18 @@ spec:
               PROWLARR__APP__THEME: dark
               PROWLARR__AUTH__METHOD: External
               PROWLARR__AUTH__REQUIRED: DisabledForLocalAddresses
-              PROWLARR__AUTH__APIKEY: "${PROWLARR_AUTH_API}"
               PROWLARR__POSTGRES__HOST: local-database-rw.database.svc.cluster.local
               PROWLARR__POSTGRES__PORT: 5432
               PROWLARR__POSTGRES__MAINDB: prowlarr-main
               PROWLARR__POSTGRES__LOGDB: prowlarr-log
-              PROWLARR__POSTGRES__USER: generalApps
-              PROWLARR__POSTGRES__PASSWORD: ${password}    
+              PROWLARR__POSTGRES__USER: generalApps  
               PROWLARR__LOG__ANALYTICSENABLED: false          
               PROWLARR__LOG__LEVEL: info
               PROWLARR__SERVER__PORT: &port 80
-              TZ: Europe/Berlin
+              TZ: ${SECRET_TZ}
+            envFrom:
+              - secretRef:
+                  name: prowlarr-secrets
             probes:
               liveness: &probes
                 enabled: true
