--- a/clusters/galaxy-cluster/kubernetes/apps/default/vibe-job-lp/ks.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/default/vibe-job-lp/ks.yaml
@@ -20,9 +20,9 @@ spec:
     namespace: flux-system
   postBuild:
     substituteFrom:
-      - name: bw-secrets-default
+      - name: cluster-secrets
         kind: Secret
-  wait: true
+  wait: false
   interval: 30m
   retryInterval: 1m
   timeout: 5m
